# substrate-1_0-grandpa-example

./: .gitignore  Cargo.toml  README.md  node-bob.sh  nodes.sh
alice/chains/local_testnet/db/: 000027.sst  000028.sst  000029.sst  000030.sst  000031.sst  000032.sst  000033.sst  000037.sst  000038.sst  000039.sst  000040.sst  000041.sst  000042.sst  000043.sst  IDENTITY  LOG  LOG.old.1565795405564685  LOG.old.1565796280455378  LOG.old.1565797787076977  MANIFEST-000036  OPTIONS-000036
bob/chains/local_testnet/db/: 000027.sst  000028.sst  000029.sst  000030.sst  000031.sst  000032.sst  000033.sst  000037.sst  000038.sst  000039.sst  000040.sst  000041.sst  000042.sst  000043.sst  IDENTITY  LOG  LOG.old.1565795412113243  LOG.old.1565796271843684  LOG.old.1565797782347868  MANIFEST-000036  OPTIONS-000046
bob/chains/local_testnet/network/: secret
runtime/: Cargo.toml
runtime/src/: lib.rs
runtime/wasm/: Cargo.toml  build.sh
runtime/wasm/src/: lib.rs
src/: chain_spec.rs  main.rs  service.rs
