[lib]
crate-type = ['cdylib']

[features]
default = []
std = ['substrate-1-0-grandpa-example-runtime/std']

[workspace]
members = []
[profile.release]
lto = true
panic = 'abort'

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'substrate-1-0-grandpa-example-runtime-wasm'
version = '1.0.0'
[dependencies.substrate-1-0-grandpa-example-runtime]
default-features = false
path = '..'
